--- a/package.json
+++ b/package.json
@@ -9,26 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@payloadcms/bundler-webpack": "^1.0.6",
     "@payloadcms/db-mongodb": "^1.3.2",
     "@payloadcms/richtext-slate": "^1.3.1",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-query": "^4.36.1",
+    "@trpc/client": "^10.45.0",
+    "@trpc/next": "^10.45.0",
+    "@trpc/react-query": "^10.45.0",
+    "@trpc/server": "^10.45.0",
     "@types/express": "^4.17.21",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.0",
     "express": "^4.18.2",
+    "input": "^1.0.1",
     "lucide-react": "^0.309.0",
     "next": "^14.1.0",
     "nodemon": "^3.0.3",
     "payload": "^2.8.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.49.3",
+    "shadcn-ui": "^0.8.0",
+    "sonner": "^1.3.1",
+    "sooner": "^1.1.4",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
