adding send email

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 PAYLOAD_SECRET=mysecret
 MONGODB_URL=mongodb+srv://gravityfalls:!Aa432486954@cluster0.79lq1yr.mongodb.net/?retryWrites=true&w=majority
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
+
+RESEND_API_KEY=re_UoRojFQR_FXCvyHS9qdeYWiMmN55BYCpe
