--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts nodemon",
+    "generate:types": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload generate:types",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -23,6 +24,7 @@
     "@trpc/react-query": "^10.45.0",
     "@trpc/server": "^10.45.0",
     "@types/express": "^4.17.21",
+    "@types/nodemailer": "^6.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cross-env": "^7.0.3",
@@ -31,6 +33,7 @@
     "input": "^1.0.1",
     "lucide-react": "^0.309.0",
     "next": "^14.1.0",
+    "nodemailer": "^6.9.8",
     "nodemon": "^3.0.3",
     "payload": "^2.8.2",
     "react": "^18",
@@ -38,7 +41,6 @@
     "react-hook-form": "^7.49.3",
     "shadcn-ui": "^0.8.0",
     "sonner": "^1.3.1",
-    "sooner": "^1.1.4",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
