--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "input": "^1.0.1",
     "lucide-react": "^0.309.0",
     "next": "^14.1.0",
+    "next-themes": "^0.2.1",
     "nodemailer": "^6.9.8",
     "nodemon": "^3.0.3",
     "payload": "^2.8.2",
