--- a/.env
+++ b/.env
@@ -1,5 +1,14 @@
-PAYLOAD_SECRET=mysecret
-MONGODB_URL=mongodb+srv://gravityfalls:!Aa432486954@cluster0.79lq1yr.mongodb.net/?retryWrites=true&w=majority
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
 
+# Any value works here, should be somewhat secure
+PAYLOAD_SECRET=gravityfalls
+
+# Database - either MongoDB or Postgres work
+MONGODB_URL=mongodb+srv://gravityfalls:!Aa432486954@cluster0.79lq1yr.mongodb.net/?retryWrites=true&w=majority
+
+# Payments
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+
+# Email
 RESEND_API_KEY=re_UoRojFQR_FXCvyHS9qdeYWiMmN55BYCpe
